# OrderEngine

./: CMakeLists.txt  Makefile  README.md  build.bat
config/: server.conf
docs/: ARCHITECTURE.md  cache-strategy.md  core-services-design.md  message-queue-design.md
include/cache/: redis_client.h
include/common/: config.h  logger.h
include/network/: channel.h  poller.h  reactor.h  tcp_connection.h  tcp_server.h
include/services/: inventory_service.h  order_service.h
scripts/sql/: init.sql
src/: CMakeLists.txt  main.cpp
src/common/: config.cpp  logger.cpp
src/network/: channel.cpp  poller.cpp  reactor.cpp  tcp_connection.cpp  tcp_server.cpp
tests/: CMakeLists.txt  test_config.cpp  test_logger.cpp  test_main.cpp  test_reactor.cpp  test_tcp_server.cpp
